--- a/backend/package.json
+++ b/backend/package.json
@@ -9,11 +9,11 @@
   },
   "dependencies": {
     "axios": "^1.7.0",
-    "express": "^4.19.0"
+    "express": "^4.19.0",
+    "typescript": "^5.4.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
-    "ts-node-dev": "^2.0.0",
-    "typescript": "^5.4.0"
+    "ts-node-dev": "^2.0.0"
   }
 }
