--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev:backend": "cd backend && npm run dev",
     "dev:frontend": "cd frontend && npm run dev",
     "dev": "npm-run-all --parallel dev:backend dev:frontend",
-    "build": "cd backend && npm run build && cd ../frontend && npm run build"
+    "build": "cd backend && npm install && npm run build && cd ../frontend && npm install && npm run build"
   },
   "devDependencies": {
     "npm-run-all": "^4.1.5"
